@@ -4,6 +4,7 @@ use Any::Moose;
 use Facebook::Graph::AccessToken;
 use Facebook::Graph::Authorize;
 use Facebook::Graph::Query;
+use Facebook::Graph::Picture;
 
 has app_id => (
     is      => 'ro',
@@ -68,6 +69,12 @@ sub query {
     return Facebook::Graph::Query->new(%params);
 }
 
+sub picture {
+    my ($self, $object_name) = @_;
+    return Facebook::Graph::Picture->new( object_name => $object_name );
+}
+
+
 
 no Any::Moose;
 __PACKAGE__->meta->make_immutable;
@@ -90,6 +97,8 @@ Or better yet:
     ->select_fields(qw( id name picture ))
     ->request
     ->as_hashref;
+    
+ my $sarahs_picture_uri = $fb->picture('sarahbownds')->get_large->uri_as_string;
  
  
 =head2 Building A Privileged App
@@ -196,6 +205,16 @@ Returns a hash reference of an object from facebook. A quick way to grab an obje
 An profile id like C<sarahbownds> or an object id like C<16665510298> for the Perl page.
 
 
+=head2 picture ( id )
+
+Returns a L<Facebook::Graph::Picture> object, which can be used to generate the URLs of the pictures of any object on Facebook.
+
+=head3 id
+
+An profile id like C<sarahbownds> or an object id like C<16665510298> for the Perl page.
+
+
+
 
 =head2 convert_sessions ( sessions )
 
@@ -226,7 +245,7 @@ This module throws exceptions when it encounters a problem. The exceptions are a
 
 =head1 TODO
 
-I still need to add publishing of content, deleting of content, access to pictures, impersonation, and analytics to have a feature complete API. In addition, a cookbook should be written, and a lot more tests as well.
+I still need to add publishing of content, deleting of content, impersonation, and analytics to have a feature complete API. In addition, a cookbook should be written, and a lot more tests as well.
 
 
 =head1 PREREQS
@@ -236,6 +255,8 @@ L<JSON>
 L<LWP>
 L<URI>
 L<Crypt::SSLeay>
+
+B<NOTE:> This module requires SSL to function, but on some systems L<Crypt::SSLeay> can be difficult to install. You may optionally choose to install L<IO::Socket::SSL> instead and it will provide the same function. Unfortunately that means you'll need to C<force> Facebook::Graph to install if you do not have C<Crypt::SSLeay> installed.
 
 =head1 SUPPORT
 
